# time-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: flet_build.yml  release.yml
src/time_tracker/: __init__.py  __main__.py  db_operations.py  main.py
