[project]
name = "time-tracker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Luigi Palumbo"}
]
dependencies = [
    "flet>=0.80.5",
    "polars>=1.38.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.luibao"
product = "time-tracker"
company = "Luibao"
copyright = "Copyright (C) 2023-2026 by Luibao"

[tool.flet.app]
path = "src/time_tracker"
